--- a/css/app.css
+++ b/css/app.css
@@ -7,9 +7,9 @@
   left:0;
   top:0;
   max-width:100%;
-  min-width:1440px;
+  min-width:100%;
   max-height:100%;
-  min-height:900px;
+  min-height:100%;
   z-index:-5;
 }
 .button {
